refactor: CORS 에러 대응 수정